--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "twitterLogo",
+    "name": "Bird_back",
     "version": "1.0",
     "description": "Get twitter bird back",
 
@@ -18,7 +18,7 @@
         "128" : "/img/icon_128.png"
     },
     "content_scripts" : [{
-            "matches" : ["https://twitter.com/*", "https://twitter.com/home"],
+            "matches" : ["https://twitter.com/*"],
             "css" : ["main.css"],
             "js" : ["main.js"]
         }
